syntax = "proto3";

package customer;

import "cusman/customer/customer.proto";

option go_package = "github.com/tunvx/simplebank/grpc/pb/cusman/customer";

message GetCustomerByIDRequest {
}

message GetCustomerByIDResponse {
    Customer customer = 1;
} 

message GetCustomerByRidRequest {
    string customer_rid = 1;
}

message GetCustomerByRidResponse {
    Customer customer = 1;
} 





